Fixed padding on small devices for 'about' block, figured out with font size, weight and color in pricing cards, fixed text alignment in footer

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -247,7 +247,6 @@
   }
 }
 
-// TODO: fix padding on small screen devices
 .about {
   padding: {
     top: 5%;
@@ -262,6 +261,9 @@
   color: $light;
   @include media('<xl') {
     background: #ffc155;
+  }
+  @include media('<lg') {
+    padding: 100px 0 130px;
   }
   & .container {
     display: flex;
@@ -335,7 +337,6 @@
   }
 }
 
-// TODO: figure out with font size and text color
 .price {
   padding: 50px 30px;
   display: flex;
@@ -381,11 +382,17 @@
         size: 6rem;
         weight: 700;
       }
+      &.light {
+        color: $light;
+      }
     }
     & small {
       text-transform: uppercase;
       color: inherit;
-      font-size: 1.8rem;
+      font: {
+        size: 1.6rem;
+        weight: 700;
+      }
     }
   }
   &__parameter {
@@ -394,7 +401,8 @@
     border-color: inherit;
     text-transform: uppercase;
     font: {
-      size: 1.5rem;
+      family: $font--main;
+      size: 1.6rem;
       weight: 400;
     }
     &:last-of-type {
@@ -816,13 +824,13 @@
   }
 }
 
-// TODO: text alignment
 .footer {
   padding: 15px 0;
   display: flex;
   justify-content: center;
   background-color: $accent--blue;
   &__text {
+    display: inline-block;
     text-align: center;
     color: $light;
     font-size: 1.2rem;
